--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,7 @@ project(e4)
 set(CMAKE_CXX_STANDARD 17)
 
 #SDL2
-set(SDL2_FLAGS "-lmingw32 -lSDL2main -lSDL2 -mwindows -lm -ldinput8 -ldxguid -ldxerr8 -luser32 -lgdi32 -lwinmm -limm32 -lole32 -loleaut32 -lshell32 -lversion -luuid -static-libgcc")
+set(SDL2_FLAGS "-lmingw32 -lSDL2main -lSDL2 -mwindows -ldinput8 -ldxguid -ldxerr8 -luser32 -lgdi32 -lwinmm -limm32 -lole32 -loleaut32 -lshell32 -lversion -luuid -lsetupapi -lhid")
 set(CMAKE_CXX_FLAGS " ${CMAKE_CXX_FLAGS} ${SDL2_FLAGS}")
 set(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake)
 find_package(SDL2 REQUIRED)
@@ -13,5 +13,5 @@ include_directories(${SDL2_INCLUDE_DIR})
 #CNtity
 include_directories(lib)
 
-add_executable(app main.cpp)
+add_executable(app src/main.cpp)
 target_link_libraries(app ${SDL2_LIBRARY} opengl32 glu32)
