--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,6 +23,10 @@ add_executable(app
         src/components/Drawable.h
         src/systems/render/Renderer.cpp src/systems/render/Renderer.h
         src/systems/render/Texture.cpp src/systems/render/Texture.h
+        src/systems/render/opengl/Shader.cpp src/systems/render/opengl/Shader.h
+        src/systems/render/opengl/FloatBuffer.cpp src/systems/render/opengl/FloatBuffer.h
+        src/systems/render/opengl/Attribute.cpp src/systems/render/opengl/Attribute.h
+        src/util/File.cpp src/util/File.h
         src/util/Window.cpp src/util/Window.h
         src/util/InputState.cpp src/util/InputState.h
         src/main.cpp)
