--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,10 +20,15 @@ include_directories(${GLBINDING_INCLUDE_DIRS})
 
 add_executable(app
         src/main.cpp
+
+        src/core/ECS.h
         src/core/App.cpp src/core/App.h
         src/core/Asset.cpp src/core/Asset.h
+
         src/components/Position.h
         src/components/Drawable.h
+
+        src/systems/transform/Transform.cpp src/systems/transform/Transform.h
         src/systems/render/Renderer.cpp src/systems/render/Renderer.h
         src/systems/render/opengl/Texture.cpp src/systems/render/opengl/Texture.h
         src/systems/render/opengl/GlRenderer.cpp src/systems/render/opengl/GlRenderer.h
@@ -34,9 +39,12 @@ add_executable(app
         src/systems/render/opengl/AttributeSlot.cpp src/systems/render/opengl/AttributeSlot.h
         src/systems/render/opengl/UniformSlot.cpp src/systems/render/opengl/UniformSlot.h
         src/systems/render/opengl/DataType.cpp src/systems/render/opengl/DataType.h
+
         src/util/File.cpp src/util/File.h
         src/util/Window.cpp src/util/Window.h
-        src/util/InputState.cpp src/util/InputState.h src/core/ECS.h)
+        src/util/InputState.cpp src/util/InputState.h
+        src/util/FrameState.cpp src/util/FrameState.h
+        )
 target_link_libraries(app lua53 ${SDL2_LIBRARY} ${GLBINDING_LIBRARIES})
 
 #output executable
