--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -41,6 +41,8 @@ add_executable(app
         src/systems/render/opengl/UniformSlot.cpp src/systems/render/opengl/UniformSlot.h
         src/systems/render/opengl/DataType.cpp src/systems/render/opengl/DataType.h
         src/systems/script/ScriptRunner.cpp src/systems/script/ScriptRunner.h
+        src/systems/script/ScriptFile.cpp src/systems/script/ScriptFile.h
+        src/systems/script/ScriptFunctions.cpp src/systems/script/ScriptFunctions.h
 
         src/util/File.cpp src/util/File.h
         src/util/Window.cpp src/util/Window.h
