support createEntity & create{Component} functions in lua. add dummy newMesh in lua.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,8 +23,9 @@ add_executable(app
 
         src/core/App.cpp src/core/App.h
         src/core/Asset.cpp src/core/Asset.h
-        src/core/Lua.h
         src/core/ECS.cpp  src/core/ECS.h
+        src/core/Lua.h
+        src/core/ScriptBridge.cpp src/core/ScriptBridge.h
 
         src/components/Components.h
         src/components/Transform.h
